# TemperatureMonitor

./: .gitignore  CMakeLists.txt  README.md  main.c
drivers/: CMakeLists.txt
drivers/LCD_I2C/: CMakeLists.txt  LCD_I2C.c
drivers/LCD_I2C/include/: LCD_I2C.h  LCD_I2C_def.h
drivers/temperature_ADC/: CMakeLists.txt  temperature_ADC.c
drivers/temperature_ADC/include/: temperature_ADC.h
